fix: show action buttons always on mobile

--- a/src/components/Photo/Photo.module.css
+++ b/src/components/Photo/Photo.module.css
@@ -125,6 +125,14 @@ div:hover > .removeButton {
     opacity: 1;
 }
 
+@media (max-width: 700px) {
+    .downloadButton,
+    .selectButton,
+    .removeButton {
+        opacity: 1 !important;
+    }
+}
+
 .videoOverlay {
     position: absolute;
     top: 0;
